--- a/css/gift.css
+++ b/css/gift.css
@@ -34,6 +34,7 @@ header {
   padding-left: 100px;
   margin-bottom: 20px;
   margin-top: 20px;
+  text-align: center;
 }
 
 .ml2 .letter {
@@ -41,26 +42,24 @@ header {
   line-height: 1em;
 }
 
-h1 {
+/* h1 {
   text-align: center;
-}
+} */
 
 
 
 
 
 
-
+/* 
 header>img {
   width: 100%;
-  /* height: 1000px; */
-  /* max-width:  100%; */
   vertical-align: middle;
   display: flex;
   align-items: center;
   justify-content: center;
   margin: 0 auto;
-}
+} */
 
 /* 導覽列 */
 .menu img {
