--- a/css/giftrwd.css
+++ b/css/giftrwd.css
@@ -32,7 +32,27 @@
         width:1520px; 
     }/* 輪播圖設定 */
 
-
+    header.thinbanner {
+        background-color: #B6937F;
+        width: 100%;
+        height: 140;
+      
+      }
+      
+      .ml2 {
+        /* font-weight: 900; */
+        font-size: 4.5em;
+        padding-left: 100px;
+        margin-bottom: 20px;
+        margin-top: 20px;
+        text-align: center;
+      }
+      
+      .ml2 .letter {
+        display: inline-block;
+        line-height: 1em;
+      }
+      
 
 /* 包住main和aside的大框 */
     .vessel{
@@ -63,8 +83,8 @@ aside.aside{
  section.left{
     display: flex;
     flex-direction: column;
-    width:600px;
-    height:700px;
+    width:900px;
+    height:600px;
     /* background-image:url("./img/tparty.jpg"); */
     /* background-image: url(../img/tparty.png); */
     /* background-repeat: no-repeat; */
@@ -75,25 +95,80 @@ aside.aside{
 
 
 
+/* 小圖換大圖 */
 
-
-
-#tparty img {
-    width:100%;
-    height:100%;
-    border: 1px solid blue;
-    /* object-fit:cover; */
-}
-
-
-
-#tdesc{
-    width:100%;
-    height:50%;
-    border: 1px deeppink;
-    background-color: black;
-}
-
+.Box {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .big {
+    /* width: 550px; */
+    /* height: 550px; */
+    position: relative;
+  }
+  
+  .big:before {
+    content: "";
+    width: 25%;
+    height: 26%;
+    display: block;
+    position: absolute;
+    background: #b6937f;
+    left: -8%;
+    bottom: -3%;
+  }
+  
+  .bigimg {
+    border: 10px solid #a08e84;
+    padding: 30px;
+    background: #f0f0f0;
+    position: relative;
+  }
+  
+  .big img {
+    width: 100%;
+  }
+  
+  .small img {
+    width: 70px;
+    height: 70px;
+    margin: 20px;
+    border-radius: 80px;
+    background: #ddd;
+  }
+  
+  
+  /* 按鈕 */
+  .small {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-left: 20px;
+  }
+  
+  
+  .small span {
+    border: 1px solid #5A0202;
+    color: #5A0202;
+    padding: 10px 40px 10px 40px;
+  
+  }
+  
+  .small span:hover {
+    background: #F2E0D2;
+  }
+  
+  .small span:visited {
+    color: #5A0202;
+  }
+  
+  .small a {
+    text-decoration: none;
+  }
 
 
 
@@ -104,8 +179,7 @@ section.right{
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width:850px;
-    /* background-color: white; */
+    width:200px;
     opacity: .8;
     border: 5px deeppink;
     padding: 5px;
@@ -121,64 +195,6 @@ section.right{
 
 h3{
     color:#BAA079;
-}
-
-
-mark{
-    background-color: white;
-}
-
-
-
-.flexline{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 10px;
-}
-
-.flexline div{
-    color: #BAA079;
-   
-}
-
-input[type="text"]{
-    caret-color:#BAA079;
-    border: 1px solid #BAA079;
-    outline:none;
-    padding:5px 15px;
-}
-
-.online3 > span{
-    color: #BAA079;
-}
-
-
-.online5 > a{
-    border: 1px solid #BAA079;
-    color: #BAA079;
-    background-color: white;
-    font-size: 16px;
-    padding:2.5px 69.5px 2.5px 69.5px;
-    text-align: center;
-    text-decoration: none;
-}
-
-.online5 > a:hover{
-    color: white;
-    background-color: #BAA079;
-}
-
-
-
-input[type="text1"]{
-    caret-color:#BAA079;
-    width: 100%;
-    border: 1px solid #BAA079;
-    outline:none;
-    margin-bottom: 20px; 
-    padding:5px 15px
-
 }
 
 
