--- a/css/brand.css
+++ b/css/brand.css
@@ -33,26 +33,6 @@
     }/* 輪播圖設定 */
 
 
-    header.thinbanner {
-        background-color: #B6937F;
-        width: 100%;
-        height: 140;
-      }
-      
-      .ml2 {
-        /* font-weight: 900; */
-        font-size: 4.5em;
-        /* padding-left: 100px; */
-        margin-bottom: 20px;
-        margin-top: 20px;
-        text-align: center;
-      }
-      
-      .ml2 .letter {
-        display: inline-block;
-        line-height: 1em;
-      }
-      
 
 /* 包住main和aside的大框 */
     .vessel{
@@ -68,11 +48,12 @@
 
 /* aside在.vessel裡 */
 aside.aside{
-    border: 1px solid yellow; 
-    max-width: 100%;
+    border: 5px solid yellow; 
+    /* max-width: 1520px; */
+    width: 100%;
     height: 33%;
     display: flex;
-    justify-content:flex-start;
+    justify-content: center;
     flex-wrap: wrap;
     /* border: 1px solid  purple; */
 }
@@ -80,220 +61,71 @@ aside.aside{
 
 
 
-
-
-
  section.left{
     display: flex;
-    justify-content: flex-end;
-    /* flex-direction: column; */
-    width:800px;
-    height:450px;
-    /* background-image:url("./img/tparty.jpg"); */
-    /* background-image: url(../img/tparty.png); */
-    /* background-repeat: no-repeat; */
-    /* background-size:contain; */
-    border:  1px solid black;
-}
-
-
-
-/* 小圖換大圖 */
-
-
-  
-  .big {
-    /* width: 550px; */
-    /* height: 550px; */
-    position: relative;
-  }
-  
-  .big:before {
-    content: "";
-    width: 25%;
-    height: 26%;
-    display: block;
-    position: absolute;
-    background: #b6937f;
-    left: -8%;
-    bottom: -3%;
-  }
-  
-  .bigimg {
-    border: 10px solid #a08e84;
-    padding: 30px;
-    background: #f0f0f0;
-    position: relative;
-  }
-  
-  .big img {
-    width: 100%;
-  }
-  
-  .small img {
-    width: 70px;
-    height: 70px;
-    margin: 20px;
-    border-radius: 80px;
-    background: #ddd;
-  }
-  
-  
-  /* 按鈕 */
-
-  .right a {
-    width: 82px;
-    height: 28px;;
-    border: 1px solid #BAA079;
-    color: #BAA079;
-    padding: 8px 43px 8px 43px;
-    text-decoration: none;
-    display: flex;
     justify-content: center;
-    align-items: center;
-  }
-  
-  .right a:hover {
-    text-decoration: none;
-    border: 1px solid #BAA079;
-    background-color: #BAA079;
-    color:white;
-  }
-/*   
-  .small span:visited {
-    color: #5A0202;
-  } */
-  /* small > i{
-      margin: 0px;
-      padding: 0px;
-  } */
-  
-  .small {
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    /* margin-left: 20px; */
-  }
+    align-items: flex-end;
+    /* flex-direction: column; */
+    width:70%;
+    height:500px;
+    border:  5px solid deeppink;
+}
 
-  section.right{
+section.right{
     display: flex;
     flex-direction: column;
     align-items: center;
-    width:300px;
-    /* opacity: .8; */
-    border: 5px deeppink;
+    justify-content: center;
+    width:30%;
+    opacity: .8;
+    border: 5px solid slateblue;
+    padding: 5px;
 }
 
 
 
-  @media (max-width:1103.5px){
-
-    .small {
+@media (max-width:1100px){
+    aside.aside{
+        border: 5px solid yellow; 
+        width: 100%;
+        height: 33%;
         display: flex;
-        flex-direction: row;
-        flex-wrap: nowrap;   
-      }
-
-      section.right{
-        display: flex;
-        flex-direction: row;
-        justify-content:  center;
-        width:100%;
-        border: 5px solid deeppink;
-      }
-
-      section.left{
-        display: flex;
-        justify-content: center;
-        width:100%;
-        height:500px;
-        border:  1px solid black;
+        flex-direction: column;
+        align-items: center;
     }
 
-     }
+    section.left{
+        display: flex;
+        justify-content: center;
+        align-items: flex-end;
+        width:100%;
+        height:500px;
+        border:  5px solid deeppink;
+    }
 
-
-     @media (max-width:560px){
-        section.right{
-            display: flex;
-            flex-direction: row;
-            flex-wrap: wrap;
-            justify-content:  center;
-            width:100%;
-            border: 5px solid deeppink;
-          }
-
-     }
-
-
-     @media (max-width:450px){
-/* 
-        .small.trun{
-            display: block;
-        } */
-        /* section.right{
-            display: flex;
-            flex-direction: row;
-            flex-wrap: wrap;
-            justify-content:  center;
-            width:100%;
-            border: 5px solid deeppink;
-          } */
-        .small img {
-            width: 70px;
-            height: 70px;
-            margin: 5px;
-            border-radius: 80px;
-            background: #ddd;
-            display: block;
-          }
-
-     }
+    section.right{
+        /* display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center; */
+        width:100%;
+        /* opacity: .8; */
+        border: 20px solid blue;
+        /* padding: 5px; */
+    }
+}
 
 
 
 
 
-     /* @media (max-width:660px){
+#tdesc{
+    width:80%;
+    height:80%;
+    /* border: 1px deeppink; */
+    background-color: black;
+}
 
-        .small {
-            display: flex;
-            flex-direction: row;
-            justify-content:  flex-start;
-            flex-wrap: nowrap; 
-            margin-left: 5%;
-          }
-    
-          section.right{
-            display: flex;
-            flex-direction: row;
-            justify-content:  flex-start;
-            width:300px;
-            border: 5px deeppink;
-            padding: 5px;
-          }
-         }
-
-        @media (max-width:555px){
-            section.right{
-                display: flex;
-                flex-direction: row;
-                justify-content:  flex-start;
-                width:300px;
-                border: 5px deeppink;
-                padding: 5px;
-              }
-              .small img {
-                width: 70px;
-                height: 70px;
-                margin: 10px;
-                border-radius: 80px;
-                background: #ddd;
-              }
-
-            }    */
-    
 
 
 
@@ -310,6 +142,64 @@ aside.aside{
 
 h3{
     color:#BAA079;
+}
+
+
+mark{
+    background-color: white;
+}
+
+
+
+.flexline{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 10px;
+}
+
+.flexline div{
+    color: #BAA079;
+   
+}
+
+input[type="text"]{
+    caret-color:#BAA079;
+    border: 1px solid #BAA079;
+    outline:none;
+    padding:5px 15px;
+}
+
+.online3 > span{
+    color: #BAA079;
+}
+
+
+.online5 > a{
+    border: 1px solid #BAA079;
+    color: #BAA079;
+    background-color: white;
+    font-size: 16px;
+    padding:2.5px 69.5px 2.5px 69.5px;
+    text-align: center;
+    text-decoration: none;
+}
+
+.online5 > a:hover{
+    color: white;
+    background-color: #BAA079;
+}
+
+
+
+input[type="text1"]{
+    caret-color:#BAA079;
+    width: 100%;
+    border: 1px solid #BAA079;
+    outline:none;
+    margin-bottom: 20px; 
+    padding:5px 15px
+
 }
 
 
