--- a/css/det.css
+++ b/css/det.css
@@ -48,7 +48,7 @@
 
 /* aside在.vessel裡的上面 */
 aside.aside{
-    border: 1px solid yellow; 
+    border: 5px solid yellow; 
     max-width: 1520px;
     height: 33%;
     display: flex;
@@ -70,7 +70,7 @@ aside.aside{
     /* background-image: url(../img/tparty.png); */
     /* background-repeat: no-repeat; */
     /* background-size:contain; */
-    border:  1px solid black;
+    border:  5px solid deeppink;
     
 }
 
@@ -91,17 +91,37 @@ aside.aside{
 }
 
 
+
+
+ /* aside裡的左邊 */
+
+ section.left{
+    display: flex;
+    /* flex-direction: column; */
+    /* align-items: center;
+    justify-content: center; */
+    width:50%;
+    /* height: 55%; */
+    /* padding: 5px; */
+}
+ /* aside裡的左邊 */
+
+
+
+
 /* 點小圖換大圖 */
 
 .big{
-    width: 568px;
-    height: 558px;
+    width: 100%;
+    height: 100%;
     border: 10px solid #5A0202;
 }
 
 .big img{
-    width: 550px;
-    height: 540px;
+    width: 100%;
+    height: 100%;
+    /* width: 550px;
+    height: 540px; */
 
 }
 .small img{
@@ -141,21 +161,6 @@ aside.aside{
 
 
 
- /* aside裡的左邊 */
-
-section.left{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width:850px;
-    /* background-color: white; */
-    opacity: .8;
-    border: 5px deeppink;
-    padding: 5px;
-}
-
- /* aside裡的左邊 */
 
 
 
