--- a/css/gift.css
+++ b/css/gift.css
@@ -80,20 +80,19 @@ aside.aside{
 
 
 
-
-
-
  section.left{
     display: flex;
     justify-content: flex-end;
-    /* flex-direction: column; */
-    width:800px;
+    width:700px;
     height:450px;
-    /* background-image:url("./img/tparty.jpg"); */
-    /* background-image: url(../img/tparty.png); */
-    /* background-repeat: no-repeat; */
-    /* background-size:contain; */
     border:  1px solid black;
+}
+
+
+section.rightend{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 
@@ -103,8 +102,6 @@ aside.aside{
 
   
   .big {
-    /* width: 550px; */
-    /* height: 550px; */
     position: relative;
   }
   
@@ -135,8 +132,10 @@ aside.aside{
     height: 70px;
     margin: 20px;
     border-radius: 80px;
-    background: #ddd;
+    /* background: #ddd; */
   }
+
+
   
   
   /* 按鈕 */
@@ -159,14 +158,7 @@ aside.aside{
     background-color: #BAA079;
     color:white;
   }
-/*   
-  .small span:visited {
-    color: #5A0202;
-  } */
-  /* small > i{
-      margin: 0px;
-      padding: 0px;
-  } */
+
   
   .small {
     text-align: center;
@@ -176,12 +168,19 @@ aside.aside{
     /* margin-left: 20px; */
   }
 
+  .small > button{
+    margin: 0;
+    padding: 0;
+    border: 1px solid transparent;  
+    outline: none;
+    background-color: white;
+  }
+
   section.right{
     display: flex;
     flex-direction: column;
     align-items: center;
-    width:300px;
-    /* opacity: .8; */
+    width:200px;
     border: 5px deeppink;
 }
 
@@ -228,18 +227,14 @@ aside.aside{
 
 
      @media (max-width:450px){
-/* 
-        .small.trun{
-            display: block;
-        } */
-        /* section.right{
-            display: flex;
-            flex-direction: row;
-            flex-wrap: wrap;
-            justify-content:  center;
-            width:100%;
-            border: 5px solid deeppink;
-          } */
+
+
+        .big {
+ 
+            height: 450px;
+          }
+   
+
         .small img {
             width: 70px;
             height: 70px;
