--- a/css/brand.css
+++ b/css/brand.css
@@ -84,7 +84,7 @@ section.right{
 
 
 
-@media (max-width:1100px){
+@media (max-width:1400px){
     aside.aside{
         border: 5px solid yellow; 
         width: 100%;
@@ -118,7 +118,6 @@ section.right{
 
 
 
-
 #tdesc{
     width:80%;
     height:80%;
@@ -127,6 +126,51 @@ section.right{
 }
 
 
+#tdesc > img{
+ width: 100%;
+ height: 100%;
+}
+
+
+@media (max-width:800px){
+        
+    #tdesc{
+        width:100%;
+        height:60%;
+        /* border: 1px deeppink; */
+        background-color: black;
+    }
+    
+    
+    #tdesc > img{
+     width: 100%;
+     height: 60%;
+    }
+    
+}
+
+
+@media (max-width:500px){
+        
+
+    section.left{
+        width:100%;
+        height:30%;
+    }
+    #tdesc{
+        width:100%;
+        height:30%;
+        /* border: 1px deeppink; */
+        background-color: black;
+    }
+    
+    
+    #tdesc > img{
+     width: 100%;
+     height: 60%;
+    }
+    
+}
 
 
 
