--- a/css/brand.css
+++ b/css/brand.css
@@ -34,6 +34,30 @@
 
 
 
+
+    header.thinbanner {
+        background-color: #B6937F;
+        width: 100%;
+        height: 140;
+    }
+    
+    .ml2 {
+        /* font-weight: 900; */
+        font-size: 4.5em;
+        /* padding-left: 100px; */
+        margin-bottom: 20px;
+        margin-top: 20px;
+        text-align: center;
+    }
+    
+    .ml2 .letter {
+        display: inline-block;
+        line-height: 1em;
+    }
+
+
+
+
 /* 包住main和aside的大框 */
     .vessel{
         border: 1px solid green; 
@@ -48,203 +72,101 @@
 
 /* aside在.vessel裡 */
 aside.aside{
-    border: 5px solid yellow; 
-    /* max-width: 1520px; */
-    width: 100%;
+    /* border: 1px solid yellow;  */
+    max-width: 1520px;
     height: 33%;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    /* border: 1px solid  purple; */
+    background: rgba(242, 224, 210, 0.5);
+    margin-top: 20px;
 }
 
 
-
-
- section.left{
+section.left{
     display: flex;
+    flex-direction: column;
     justify-content: center;
-    align-items: flex-end;
-    /* flex-direction: column; */
-    width:70%;
-    height:500px;
-    border:  5px solid deeppink;
+    width:600px;
+    /* height:700px; */
+    /* border:  1px solid black; */
+    /* background: rgba(242, 224, 210, 0.5); */
 }
+
+
+
+#large{
+    width: 100%;
+}
+
 
 section.right{
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width:30%;
+    width:850px;
     opacity: .8;
-    border: 5px solid slateblue;
-    padding: 5px;
+    border: 5px deeppink;
+    padding: 40px;
 }
 
 
 
-@media (max-width:1400px){
-    aside.aside{
-        border: 5px solid yellow; 
-        width: 100%;
-        height: 33%;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
+#h1title {
+    font-size: 24px;
+    text-align: center;
+    color: grey;
+}  
 
-    section.left{
-        display: flex;
-        justify-content: center;
-        align-items: flex-end;
-        width:100%;
-        height:500px;
-        border:  5px solid deeppink;
-    }
 
-    section.right{
-        /* display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center; */
-        width:100%;
-        /* opacity: .8; */
-        border: 20px solid blue;
-        /* padding: 5px; */
-    }
+#tparty{
+    background: rgba(242, 224, 210, 0.5);
+    width:75%;
 }
 
-
+#tparty p {
+    font-size: 12px;
+    text-align: center;
+    border-bottom: 1px solid lightgray;
+    border-left: 0px;
+    border-right: 0px;
+    /* padding-bottom: 10px; */
+}
 
 
 #tdesc{
-    width:80%;
-    height:80%;
-    /* border: 1px deeppink; */
-    background-color: black;
-}
-
-
-#tdesc > img{
- width: 100%;
- height: 100%;
-}
-
-
-@media (max-width:800px){
-        
-    #tdesc{
-        width:100%;
-        height:60%;
-        /* border: 1px deeppink; */
-        background-color: black;
-    }
-    
-    
-    #tdesc > img{
-     width: 100%;
-     height: 60%;
-    }
-    
-}
-
-
-@media (max-width:500px){
-        
-
-    section.left{
-        width:100%;
-        height:30%;
-    }
-    #tdesc{
-        width:100%;
-        height:30%;
-        /* border: 1px deeppink; */
-        background-color: black;
-    }
-    
-    
-    #tdesc > img{
-     width: 100%;
-     height: 60%;
-    }
-    
-}
-
-
-
-
-
-
-
-.h3title{
-    border:1px solid #BAA079;
-    padding: 0px 5px 0px 5px;
-    margin-bottom: 20px;
-}
-
-h3{
-    color:#BAA079;
-}
-
-
-mark{
-    background-color: white;
-}
-
-
-
-.flexline{
+    width:75%;
+    /* height:50%; */
+    border: 1px deeppink;
+    color: grey;
+    background: rgba(242, 224, 210, 0.5);
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
+}
+
+/* #tdesc p{
+    margin: 25px;
+} */
+
+
+.more_info > a{  /* 按鈕a */
     margin-bottom: 10px;
-}
-
-.flexline div{
-    color: #BAA079;
-   
-}
-
-input[type="text"]{
-    caret-color:#BAA079;
-    border: 1px solid #BAA079;
-    outline:none;
-    padding:5px 15px;
-}
-
-.online3 > span{
-    color: #BAA079;
-}
-
-
-.online5 > a{
-    border: 1px solid #BAA079;
-    color: #BAA079;
-    background-color: white;
-    font-size: 16px;
-    padding:2.5px 69.5px 2.5px 69.5px;
-    text-align: center;
+    padding: 2.5px 25px 2.5px 25px;
     text-decoration: none;
-}
-
-.online5 > a:hover{
-    color: white;
-    background-color: #BAA079;
-}
-
-
-
-input[type="text1"]{
-    caret-color:#BAA079;
-    width: 100%;
     border: 1px solid #BAA079;
-    outline:none;
-    margin-bottom: 20px; 
-    padding:5px 15px
-
+    color: #BAA079;
 }
+
+.more_info > a:hover{
+    text-decoration: none;
+    border: 1px solid #BAA079;
+    background-color: #BAA079;
+    color:white;
+}
+
+
 
 
 
@@ -269,54 +191,70 @@ input[type="text1"]{
         border-right: 0px;
     }/* 標題 */
 
-    /* 商品圖頁面縮小會往下排 */
-    #featured{
-        display: flex;
-        justify-content: center;
-        flex-wrap: wrap;
-    }
-    /* 商品圖頁面縮小會往下排 */
 
-    #featured.container {
+      .panel-group{
         width: 100%;
-        max-width: 1300px;
     }
-    #featured .fboxs {
+
+      .panel-control {
+        position:absolute;
+        opacity:0;
+      }
+
+      .tab-group{
         display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-        flex: 1 0 25%;
-        padding: 0 20px;
-    }
-    #featured .fboxs p {
-        margin-top: 0;
-    }
+        justify-content: space-around;
+      }
 
- 
-    .more_info > a{  /* 按鈕a */
-        margin-bottom: 10px;
-        padding: 2.5px 25px 2.5px 25px;
-        text-decoration: none;
-        border: 1px solid #BAA079;
+      .tab-group label {
+        width: 33%;
+        display:inline-block;
+        padding: 10px 30px;
+        border:1px solid #BAA079;
+        border-bottom:none;
+        background-color: white;
+        bottom:-1px;
+        position:relative;
         color: #BAA079;
+        /* border-top-left-radius: 10px;
+        border-top-right-radius: 10px; */
+        text-align: center;
+      }
+
+      .content-group {
+        border:1px solid #ccc;
+      }
+
+      .content{
+        display:none;
+      }
+
+      
+      #radio1:checked ~ .tab-group [for="radio1"],
+      #radio2:checked ~ .tab-group [for="radio2"],
+      #radio3:checked ~ .tab-group [for="radio3"]{background-color: #BAA079; color: white; }
+      
+      /* #radio2:checked~ .content-group .content1{display:none}
+      #radio3:checked~ .content-group .content1{display:none} */
+      
+      #radio1:checked ~ .content-group .content1,
+      #radio2:checked ~ .content-group .content2,
+      #radio3:checked ~ .content-group .content3 {display:block;}
+
+      #featured{
+          display: flex;
+          flex-wrap: wrap;
+      }
+
+      #featured .fboxs {
+        flex: 1 0 25%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
 
-    .more_info > a:hover{
-        text-decoration: none;
-        border: 1px solid #BAA079;
-        background-color: #BAA079;
-        color:white;
-    }
 
-
-    /* main在.vessel裡 */
-
-
-
-
-
-
+/* main在.vessel裡 */
 
 
 
