--- a/css/gift copy.css
+++ b/css/gift copy.css
@@ -79,6 +79,7 @@ header.thinbanner {
 /* aside在.vessel裡 */
 aside.aside {
     border: 1px solid yellow;
+    /* background-color: rgba(242, 224, 210, 0.5); */
     max-width: 100%;
     height: 33%;
     display: flex;
@@ -95,8 +96,7 @@ div.left {
     justify-content: flex-end;
     width: 700px;
     height: 450px;
-    /* border: 1px solid black; */
-    border: 2px solid #b6937f;
+    border: 1px solid black;
     margin-bottom: 30px;
 }
 
@@ -106,9 +106,7 @@ section.rightend {
     flex-direction: column;
     justify-content: center;
     /* border: 5px solid hotpink; */
-    background: rgba(242, 224, 210, 0.5);
-    /* padding-bottom:15px; */
-    padding: 40px;
+    background: rgba(242, 224, 210, 0.8);
 }
 
 
@@ -116,8 +114,6 @@ section.rightend {
     list-style: none;
     color: grey;
 }
-
-
 
 
 #h1title {
@@ -137,7 +133,6 @@ section.rightend {
 }
 
 
-
 /* 小圖換大圖 */
 
 .big {
@@ -147,23 +142,22 @@ section.rightend {
 
 .big:before {
     content: "";
-    width: 30%;
+    width: 25%;
     height: 26%;
     display: block;
     position: absolute;
-    /* background: #b6937f; */
-    background:rgba(242, 224, 210, 0.7);
+    background: #b6937f;
     left: -8%;
     bottom: -3%;
 }
 
 .bigimg {
     height: 100%;
-    /* border: 10px solid #a08e84; */
-    border: 10px solid  #BAA079;
+    border: 10px solid #a08e84;
     padding: 30px;
     background: white;
     position: relative;
+    /* border: 10px solid darkgoldenrod; */
 }
 
 .bigimg img {
@@ -193,6 +187,7 @@ section.rightend {
     border: 1px solid transparent;
     outline: none;
     background-color: white;
+    /* background-color: rgba(242, 224, 210, 0); */
 }
 
 div.right {
@@ -211,7 +206,6 @@ div.right {
 /* 計數器 */
 .counter {
     display: flex;
-    justify-content: center;
 }
 
 #buy_count {
@@ -230,8 +224,7 @@ div.right {
     width: 20px;
     height: 25px;
     border: 1px transparent;
-    background-color: #BAA079;
-    /* background-color: rgba(160, 142, 132, 0.8); */
+    background-color: rgba(160, 142, 132, 0.8);
     color: white;
     outline: none;
     border-radius: 2px;   
@@ -247,12 +240,11 @@ div.right {
     width: 90px;
     height: 25px;
     border: 1px transparent;
-    background-color: #BAA079;
-    /* background-color: rgba(160, 142, 132, 0.8); */
+    background-color: rgba(160, 142, 132, 0.8);
     color: white;
     outline: none;
     border-radius: 2px;
-    margin-left: 5px;
+    margin-top: 5px;
 
 }
 
@@ -262,6 +254,7 @@ div.right {
     transform: translateY(1px);
     background-color: ;
 }
+
 
 /* 計數器 */
 
@@ -308,7 +301,7 @@ div.right {
         justify-content: center;
         width: 100%;
         height: 500px;
-        border: 1px solid #b6937f;;
+        border: 1px solid black;
     }
 
 }
@@ -340,7 +333,7 @@ div.right {
     .small img {
         width: 70px;
         height: 70px;
-        margin: 2px;
+        margin: 5px;
         border-radius: 80px;
         background: #ddd;
         display: block;
@@ -352,48 +345,50 @@ div.right {
 
 
 article {
-    width: 100%;
     margin-top: 50px;
     display: flex;
+    flex-direction: column;
     justify-content: center;
+    position: relative;
     /* border: 5px solid red; */
-    background-image: url(../img/ban1.png);
-    background-repeat: no-repeat;
 }
-
 
 
 .insidegift {
-    margin-top: 150px;
-    border-radius: 50%;
-    overflow: hidden;
-    width: 400px;
+    /* margin-top:150px; */
+    /* border-radius: 50%; */
+    /* overflow: hidden; */
+    height: 400px;
+    width: 100%;
+    /* padding-bottom: 300px; */
+    border: 3px solid black;
+    display: flex;
+    justify-content: center;
+    position:absolute;
+    z-index: 1;
+    margin-bottom: 500px;
 }
+
 
 .insidegift img {
-    width: 100%;
-    border-radius: 50%;
+    height: 100%;
+    /* border-radius: 50%; */
 }
 
+.inarticle{
+    height: 400px;
+     border: 5px solid skyblue;
+     /* margin-bottom: 500px; */
+     background-image: url(../img/bg0.jpg);
+     background-size: contain;
+ }
 
-.paragraph{
-    /* width: 100%; */
-    /* border: 5px solid gold ; */
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
 
-#description{
-    /* text-align: center; */
-    display:flex;
-    flex-direction: column;
-    /* align-items: center; */
-    list-style: none;
-    padding-left: 13%;
-    margin: 0px;
-    color: grey;
-}
+
+
+
+
+
 
 
 
