--- a/css/predetail.css
+++ b/css/predetail.css
@@ -82,7 +82,7 @@ aside.aside {
     max-width: 100%;
     height: 33%;
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     flex-wrap: wrap;
     /* border: 1px solid  purple; */
 }
@@ -95,8 +95,7 @@ div.left {
     justify-content: flex-end;
     width: 700px;
     height: 450px;
-    /* border: 1px solid black; */
-    border: 2px solid #b6937f;
+    border: 1px solid black;
     margin-bottom: 30px;
 }
 
@@ -107,8 +106,6 @@ section.rightend {
     justify-content: center;
     /* border: 5px solid hotpink; */
     background: rgba(242, 224, 210, 0.5);
-    /* padding-bottom:15px; */
-    padding: 40px;
 }
 
 
@@ -116,8 +113,6 @@ section.rightend {
     list-style: none;
     color: grey;
 }
-
-
 
 
 #h1title {
@@ -130,44 +125,35 @@ section.rightend {
 .change p {
     font-size: 12px;
     text-align: center;
-    border-bottom: 1px solid lightgray;
-    border-left: 0px;
-    border-right: 0px;
-    padding-bottom: 10px;
 }
-
 
 
 /* 小圖換大圖 */
 
 .big {
-    height: 100%;
     position: relative;
 }
 
 .big:before {
     content: "";
-    width: 30%;
+    width: 25%;
     height: 26%;
     display: block;
     position: absolute;
-    /* background: #b6937f; */
-    background:rgba(242, 224, 210, 0.7);
+    background: #b6937f;
     left: -8%;
     bottom: -3%;
 }
 
 .bigimg {
-    height: 100%;
-    /* border: 10px solid #a08e84; */
-    border: 10px solid  #BAA079;
+    border: 10px solid #a08e84;
     padding: 30px;
-    background: white;
+    background: #f0f0f0;
     position: relative;
 }
 
-.bigimg img {
-    height: 100%;
+.big img {
+    width: 100%;
 }
 
 .small img {
@@ -192,8 +178,7 @@ section.rightend {
     padding: 0;
     border: 1px solid transparent;
     outline: none;
-    background-color: transparent;
-
+    background-color: white;
 }
 
 div.right {
@@ -201,8 +186,7 @@ div.right {
     flex-direction: column;
     align-items: center;
     width: 200px;
-    /* border: 5px deeppink; */
-    background-color:  rgba(242, 224, 210, 0.5);
+    border: 5px deeppink;
 }
 
 /* 小圖換大圖 */
@@ -213,7 +197,6 @@ div.right {
 /* 計數器 */
 .counter {
     display: flex;
-    justify-content: center;
 }
 
 #buy_count {
@@ -231,62 +214,17 @@ div.right {
 .add_minus {
     width: 20px;
     height: 25px;
-    border: 1px transparent;
-    background-color: #BAA079;
-    /* background-color: rgba(160, 142, 132, 0.8); */
-    color: white;
-    outline: none;
-    border-radius: 2px;   
-}
-
-.add_minus:active{
-    box-shadow: 2px 2px hsla(240, 0%, 50%, 0.3);
-    transform: translateY(1px);
-    background-color: ;
-}
-
-.addtobag{
-    width: 90px;
-    height: 25px;
-    border: 1px transparent;
-    background-color: #BAA079;
-    /* background-color: rgba(160, 142, 132, 0.8); */
+    border: 1px solid #BAA079;
+    background-color: rgba(160, 142, 132, 0.8);
     color: white;
     outline: none;
     border-radius: 2px;
-    margin-left: 5px;
-
-}
-
-.addtobag:active{
-    /* border: 5px solid hsla(240, 0%, 50%, 0.3); */
-    box-shadow: 2px 2px hsla(240, 0%, 50%, 0.3);
-    transform: translateY(1px);
-    background-color: ;
 }
 
 /* 計數器 */
 
-@media (max-width:1250px) {
-    section.rightend{
-        width: 100%;
-    }
 
-    .change{
-       
-       display: flex;
-       flex-direction: column;
-       align-items: center;
-    }
 
-    .change p {
-        width: 100%;
-        border-bottom: 1px solid lightgray;
-        border-left: 0px;
-        border-right: 0px;
-        padding-bottom: 10px;
-    }
-}
 
 
 @media (max-width:1103.5px) {
@@ -310,7 +248,7 @@ div.right {
         justify-content: center;
         width: 100%;
         height: 500px;
-        border: 1px solid #b6937f;;
+        border: 1px solid black;
     }
 
 }
@@ -323,7 +261,6 @@ div.right {
         flex-wrap: wrap;
         justify-content: center;
         width: 100%;
-        margin-top:20px;
         border: 5px solid deeppink;
     }
 
@@ -342,7 +279,7 @@ div.right {
     .small img {
         width: 70px;
         height: 70px;
-        margin: 2px;
+        margin: 5px;
         border-radius: 80px;
         background: #ddd;
         display: block;
@@ -354,48 +291,31 @@ div.right {
 
 
 article {
-    width: 100%;
-    margin-top: 50px;
+    margin-top: 80px;
     display: flex;
     justify-content: center;
-    /* border: 5px solid red; */
-    background-image: url(../img/ban1.png);
-    background-repeat: no-repeat;
+    border: 5px solid red;
+    background-image: url(../img/glit.jpg);
+    background-repeat: repeat-x;
 }
 
 
-
 .insidegift {
-    margin-top: 150px;
-    border-radius: 50%;
+    /* margin-top: 300px; */
+    /* border-radius: 50%; */
     overflow: hidden;
-    width: 400px;
+    width: 600px;
+    height: 500px;
+    border: 5px solid green;
+    display: inline-block;
 }
 
 .insidegift img {
     width: 100%;
-    border-radius: 50%;
+    /* margin-left:50%; */
 }
 
 
-.paragraph{
-    /* width: 100%; */
-    /* border: 5px solid gold ; */
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-#description{
-    /* text-align: center; */
-    display:flex;
-    flex-direction: column;
-    /* align-items: center; */
-    list-style: none;
-    padding-left: 13%;
-    margin: 0px;
-    color: grey;
-}
 
 
 
