--- a/css/gift.css
+++ b/css/gift.css
@@ -64,7 +64,7 @@ header.thinbanner {
 
 /* 包住main和aside的大框 */
 .vessel {
-    border: 1px solid green;
+    /* border: 1px solid green; */
     max-width: 1520px;
     display: flex;
     flex-direction: column;
@@ -78,7 +78,7 @@ header.thinbanner {
 
 /* aside在.vessel裡 */
 aside.aside {
-    border: 1px solid yellow;
+    /* border: 1px solid yellow; */
     max-width: 100%;
     height: 33%;
     display: flex;
@@ -93,7 +93,8 @@ aside.aside {
 div.left {
     display: flex;
     justify-content: flex-end;
-    width: 700px;
+    width: 50%;
+    /* width: 700px; */
     /* height: 450px; */
     /* border: 1px solid black; */
     border: 2px solid #b6937f;
@@ -158,7 +159,7 @@ section.rightend {
 }
 
 .bigimg {
-    width: 500px;
+    width: 100%;
     /* height: 100%; */
     /* border: 10px solid #a08e84; */
     border: 10px solid  #BAA079;
@@ -201,7 +202,7 @@ div.right {
     flex-direction: column;
     align-items: center;
     width: 200px;
-    border: 5px deeppink;
+    /* border: 5px deeppink; */
 }
 
 /* 小圖換大圖 */
@@ -301,7 +302,7 @@ div.right {
         flex-direction: row;
         justify-content: center;
         width: 100%;
-        border: 5px solid deeppink;
+        /* border: 5px solid deeppink; */
     }
 
     div.left {
@@ -323,8 +324,10 @@ div.right {
         justify-content: center;
         width: 100%;
         margin-top:20px;
-        border: 5px solid deeppink;
+        /* border: 5px solid deeppink; */
     }
+
+ 
 
 }
 
