--- a/css/index.css
+++ b/css/index.css
@@ -122,7 +122,7 @@ section.left{
     padding-top: 64%;
     /* border: 1px solid deeppink; */
     /* background: rgba(242, 224, 210, 0.5); */
-    background-image: url(../img/video.png);
+    background-image: url(../img/auc.png);
     background-size:cover;
     /* display: flex;
     align-items: flex-end;
