--- a/js/detail.css
+++ b/js/detail.css
@@ -64,7 +64,7 @@ header.thinbanner {
 
 /* 包住main和aside的大框 */
 .vessel {
-    border: 1px solid green;
+    /* border: 1px solid green; */
     max-width: 1520px;
     display: flex;
     flex-direction: column;
@@ -78,7 +78,7 @@ header.thinbanner {
 
 /* aside在.vessel裡 */
 aside.aside {
-    border: 1px solid yellow;
+    /* border: 1px solid yellow; */
     max-width: 100%;
     height: 33%;
     display: flex;
@@ -90,17 +90,18 @@ aside.aside {
 
 
 
-
-
 div.left {
     display: flex;
     justify-content: flex-end;
-    width: 50%;
+    /* height: 20%; */
+    /* width: 50%; */
     /* width: 700px; */
     /* height: 450px; */
     /* border: 1px solid black; */
     border: 2px solid #b6937f;
     margin-bottom: 30px;
+    /* margin-left: 100px; */
+    margin-right: 0px;
 }
 
 
@@ -143,6 +144,12 @@ section.rightend {
 
 /* 小圖換大圖 */
 
+#large{
+   width: 60%;
+}
+
+
+
 .big {
     /* height: 100%; */
     position: relative;
@@ -161,7 +168,6 @@ section.rightend {
 }
 
 .bigimg {
-    width: 100%;
     /* height: 100%; */
     /* border: 10px solid #a08e84; */
     border: 10px solid  #BAA079;
@@ -203,7 +209,7 @@ div.right {
     display: flex;
     flex-direction: column;
     align-items: center;
-    /* width: 200px; */
+    width:20%;
     /* border: 5px deeppink; */
 }
 
@@ -304,7 +310,7 @@ div.right {
         flex-direction: row;
         justify-content: center;
         width: 100%;
-        border: 5px solid deeppink;
+        /* border: 5px solid deeppink; */
     }
 
     div.left {
@@ -326,8 +332,10 @@ div.right {
         justify-content: center;
         width: 100%;
         margin-top:20px;
-        border: 5px solid deeppink;
+        /* border: 5px solid deeppink; */
     }
+
+ 
 
 }
 
